Remove comment to fix overflow on draw-report

--- a/src/GeositeFramework/plugins/draw_report/draw_report.css
+++ b/src/GeositeFramework/plugins/draw_report/draw_report.css
@@ -5,7 +5,7 @@
 ul.tabs-content.report-plugin-list {
 	margin: 0 0 0;
 	padding: 0;
-	/*overflow: auto;*/
+	overflow: auto;
 	height: 320px;
 	position: relative;
 	}
